--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/login_relative1"
     tools:context=".Login_Activity">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
@@ -15,11 +16,10 @@
         android:id="@+id/imagetiffen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/tiffin"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="20dp"
+        android:src="@drawable/tiffin1"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,8 +77,8 @@
           android:layout_height="30dp"
           android:layout_below="@id/text1"
           android:layout_marginStart="20dp"
-          android:layout_marginTop="12dp"
-          android:src="@drawable/login_person" />
+          android:layout_marginTop="10dp"
+          android:src="@drawable/person_login" />
 
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/username"
@@ -92,9 +92,10 @@
           android:layout_toEndOf="@id/personimg"
           android:backgroundTint="@color/text_grey"
           android:fontFamily="@font/osr"
-          android:hint="8433305908"
+          android:maxLength="10"
+          android:hint="eg:123*****90"
           android:importantForAutofill="no"
-          android:inputType="textVisiblePassword"
+          android:inputType="number"
           android:paddingBottom="10dp"
           android:textColor="@color/black"
           android:textColorHint="@color/text_grey" />
@@ -113,7 +114,7 @@
           android:layout_height="wrap_content"
           android:layout_below="@id/username"
           android:layout_marginStart="20dp"
-          android:layout_marginTop="30dp"
+          android:layout_marginTop="25dp"
           android:fontFamily="@font/osr"
           android:text="Your password"
           android:textColor="@color/black"
@@ -178,7 +179,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/linearlayout"
-      android:layout_marginLeft="250dp"
+      android:textAlignment="center"
       android:layout_marginTop="10dp"
       android:fontFamily="@font/osr"
       android:text="Forgot Password?"
@@ -186,25 +187,54 @@
       android:textSize="16sp"
       android:textStyle="bold" />
 
+  <RelativeLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/create_relative"
+      android:layout_below="@id/forgotpass"
+      android:textAlignment="center"
+      android:layout_marginTop="5dp">
+
+  <TextView
+      android:id="@+id/text"
+      android:fontFamily="@font/osr"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Don't have an account?"
+      android:textColor="@color/black"
+      android:layout_centerHorizontal="true"
+      />
+
+  <TextView
+      android:id="@+id/create"
+      android:layout_toRightOf="@id/text"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text=" Create One"
+      android:fontFamily="@font/osr"
+      android:textStyle="bold"
+      android:backgroundTint="@color/palette_light_teal"
+      android:textColor="#ff800c"
+      />
+</RelativeLayout>
+
   <Button
       android:id="@+id/signinbutton"
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_below="@id/forgotpass"
       android:layout_centerHorizontal="true"
-      android:layout_marginTop="20dp"
+      android:layout_marginTop="40dp"
       android:background="@drawable/button_rounds"
       android:elevation="5dp"
       android:fontFamily="@font/osr"
       android:padding="10dp"
       android:stateListAnimator="@null"
-      android:text="Sign in"
+      android:text="Log in"
       android:textStyle="bold"
       android:translationZ="5dp" >
 
   </Button>
-
-
 
 
 
