--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EasyMeal" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.EasyMeal" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
         <!-- Customize your theme here. -->
+
+
     </style>
+
+    <style name="fullscreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/dialog_open</item>
+        <item name="android:windowExitAnimation">@anim/dialog_close</item>
+
+    </style>
+
+    <style name="CustomMaterialTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
+
+
+
 </resources>
