--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,7 +81,7 @@
           android:src="@drawable/person_login" />
 
       <androidx.appcompat.widget.AppCompatEditText
-          android:id="@+id/username"
+          android:id="@+id/Phone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/text1"
@@ -102,7 +102,7 @@
 
 
       <View
-          android:layout_below="@id/username"
+          android:layout_below="@id/Phone"
           android:layout_marginHorizontal="20dp"
           android:layout_width="match_parent"
           android:layout_height="1dp"
@@ -112,7 +112,7 @@
           android:id="@+id/text2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_below="@id/username"
+          android:layout_below="@id/Phone"
           android:layout_marginStart="20dp"
           android:layout_marginTop="25dp"
           android:fontFamily="@font/osr"
@@ -131,7 +131,7 @@
           android:src="@drawable/password_lock" />
 
       <androidx.appcompat.widget.AppCompatEditText
-          android:id="@+id/password"
+          android:id="@+id/Loginpassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/text2"
@@ -163,7 +163,7 @@
       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:layout_below="@id/password"
+          android:layout_below="@id/Loginpassword"
           android:layout_marginHorizontal="20dp"
           android:background="@android:color/darker_gray" />
 
@@ -174,11 +174,29 @@
 
   </LinearLayout>
 
+  <Button
+      android:id="@+id/signinbutton"
+      android:layout_width="300dp"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/linearlayout"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="40dp"
+      android:background="@drawable/button_rounds"
+      android:elevation="5dp"
+      android:fontFamily="@font/osr"
+      android:padding="10dp"
+      android:stateListAnimator="@null"
+      android:text="Log in"
+      android:textStyle="bold"
+      android:translationZ="5dp" >
+
+  </Button>
+
   <TextView
       android:id="@+id/forgotpass"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_below="@id/linearlayout"
+      android:layout_below="@id/signinbutton"
       android:textAlignment="center"
       android:layout_marginTop="10dp"
       android:fontFamily="@font/osr"
@@ -216,25 +234,9 @@
       android:backgroundTint="@color/palette_light_teal"
       android:textColor="#ff800c"
       />
-</RelativeLayout>
+     </RelativeLayout>
 
-  <Button
-      android:id="@+id/signinbutton"
-      android:layout_width="300dp"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/forgotpass"
-      android:layout_centerHorizontal="true"
-      android:layout_marginTop="40dp"
-      android:background="@drawable/button_rounds"
-      android:elevation="5dp"
-      android:fontFamily="@font/osr"
-      android:padding="10dp"
-      android:stateListAnimator="@null"
-      android:text="Log in"
-      android:textStyle="bold"
-      android:translationZ="5dp" >
 
-  </Button>
 
 
 
