--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -15,6 +15,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:ems="10"
+        android:background="@drawable/userinfo_background"
         android:hint="FullName"
         android:inputType="textPersonName"
         android:padding="10dp"
@@ -35,6 +36,7 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:background="@drawable/userinfo_background"
         android:padding="5dp"
         android:textColor="#0D0C0C"
         android:textColorHighlight="#FBFBFB"
@@ -53,6 +55,7 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Password"
+        android:background="@drawable/userinfo_background"
         android:inputType="textPersonName"
         android:padding="5dp"
         android:textColor="#0D0C0C"
@@ -71,6 +74,7 @@
         android:ems="10"
         android:hint="House No.| Building Name"
         android:inputType="textPersonName"
+        android:background="@drawable/userinfo_background"
         android:padding="5dp"
         android:textColor="#0D0C0C"
         android:textColorHighlight="#FBFBFB"
@@ -87,6 +91,7 @@
         android:ems="10"
         android:hint="Road Name, Area, Colony"
         android:inputType="textPersonName"
+        android:background="@drawable/userinfo_background"
         android:padding="5dp"
         android:textColor="#0D0C0C"
         android:textColorHighlight="#FBFBFB"
@@ -106,6 +111,7 @@
         android:padding="5dp"
         android:textColor="#0D0C0C"
         android:textColorHighlight="#FBFBFB"
+        android:background="@drawable/userinfo_background"
         android:textColorHint="#121111"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,6 +122,7 @@
         android:layout_width="292dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/userinfo_background"
         android:ems="10"
         android:hint="State"
         android:inputType="textPersonName"
@@ -138,6 +145,7 @@
         android:hint="Pincode"
         android:inputType="phone"
         android:maxLength="6"
+        android:background="@drawable/userinfo_background"
         android:padding="5dp"
         android:textColor="#0B0B0B"
         android:textColorHighlight="#FFFFFF"
