--- a/app/src/main/res/layout/activity_tiffin_detail.xml
+++ b/app/src/main/res/layout/activity_tiffin_detail.xml
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_rounds"
-        android:text="Add to Cart" />
+        android:text="Order Now" />
 
 
 
