--- a/app/src/main/res/layout/otp_verification.xml
+++ b/app/src/main/res/layout/otp_verification.xml
@@ -20,7 +20,7 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enter_otp_info"
