--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item
-            android:id="@+id/menu_home"
+
+        <item android:id="@+id/discoverhome"
             android:icon="@drawable/baseline_home_24"
-            android:title="@string/home" />
-        <item
-            android:id="@+id/menu_setting"
-            android:icon="@drawable/baseline_settings_24"
-            android:title="@string/settings"/>
-        <item
-            android:id="@+id/menu_cart"
+            android:title="Discover" />
+
+        <item android:id="@+id/addtocart"
             android:icon="@drawable/baseline_cart_24"
-            android:title="@string/carts"/>
+            android:title="Cart"/>
+
+        <item android:id="@+id/profile"
+            android:icon="@drawable/profilegrey"
+            android:title="Profile" />
+
 </menu>
