--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="165dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="166dp"
-        android:src="@drawable/profile_icon"
+        android:src="@drawable/profileedit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
